fix: TOTP only (ARROW_TOKEN removed 2026-08-24), DEDUP_TTL_MS/CANDLE/chkpt pins, flink /checkpoints 777, live 1024 reconciled 4821391 offsets QP3796 VB7IBR4 gate green